<resources>
  <string name="app_name">智慧园林</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">设置</string>
  <string name="no_internet">没有网络</string>
  <string name="missing_parameter">请求参数有问题</string>
  <string name="internal_server_error">服务器异常</string>
  <string name="user_exist">用户已存在</string>
  <string name="user_name_or_password_wrong">用户名或密码错误</string>
  <string name="unauthorized">授权失败,请重新登录</string>
  <string name="unknown_error">未知错误</string>
  <string name="user_name">用户名</string>
  <string name="password">密码</string>
  <string name="login">登录</string>
  <string name="hit_register">没有账号?马上注册</string>
  <string name="register">注册</string>
  <string name="password_confirm">确认密码</string>
  <string name="domain_or_ip">域名或ip</string>
  <string name="port">端口</string>
  <string name="setting">设置</string>
  <string name="name">名称</string>
  <string name="description">简介</string>
  <string name="ecology">生态</string>
  <string name="temperature">温度</string>
  <string name="humidity">湿度</string>
  <string name="pm25">PM2.5</string>
  <string name="wind">风力</string>
  <string name="dressing">穿衣指数</string>
  <string name="sight">景点</string>
  <string name="plants">植物</string>
  <string name="route">路线</string>
  <string name="service">服务设施</string>
  <string name="map">地图</string>
  <string name="sight_list">所经过景点</string>
  <string name="sight_inside">所在景点</string>
  <string name="count">个数</string>
  <string name="logout">登出</string>
  <string name="location">位置</string>
</resources>
