<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="8dp"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="4dp"
      >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textSize="13sp"
        />
  </LinearLayout>
  <com.jaeger.ninegridimageview.NineGridImageView
      android:id="@+id/nine_grid_sight"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:visibility="gone"
      app:imgGap="4dp"
      app:showStyle="fill"
      app:singleImgSize="120dp"
      />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="4dp"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        />
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="4dp"
      >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/location"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:textSize="13sp"
        />
  </LinearLayout>
  <LinearLayout
      android:id="@+id/ll_ecology"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/ecology"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_margin="4dp"
        android:background="#999999"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/temperature"
          android:textSize="15sp"
          />
      <TextView
          android:id="@+id/temperature"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="5"
          android:ellipsize="end"
          android:gravity="center_vertical"
          android:maxLines="1"
          android:textSize="13sp"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/humidity"
          android:textSize="15sp"
          />
      <TextView
          android:id="@+id/humidity"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="5"
          android:ellipsize="end"
          android:gravity="center_vertical"
          android:maxLines="1"
          android:textSize="13sp"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/pm25"
          android:textSize="15sp"
          />
      <TextView
          android:id="@+id/pm25"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="5"
          android:ellipsize="end"
          android:gravity="center_vertical"
          android:maxLines="1"
          android:textSize="13sp"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/wind"
          android:textSize="15sp"
          />
      <TextView
          android:id="@+id/wind"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="5"
          android:ellipsize="end"
          android:gravity="center_vertical"
          android:maxLines="1"
          android:textSize="13sp"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        >
      <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/dressing"
          android:textSize="15sp"
          />
      <TextView
          android:id="@+id/dressing"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="5"
          android:ellipsize="end"
          android:gravity="center_vertical"
          android:maxLines="1"
          android:textSize="13sp"
          />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>