<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >
  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_domain_or_ip"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toTopOf="@+id/til_port"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_domain_or_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/domain_or_ip"
        android:inputType="text"
        />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:id="@+id/til_port"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintBottom_toTopOf="@+id/btn_setting"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/til_domain_or_ip"
      >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port"
        android:inputType="textPassword"
        />
  </android.support.design.widget.TextInputLayout>
  <com.dd.processbutton.iml.ActionProcessButton
      android:id="@+id/btn_setting"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/setting"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/til_port"
      app:layout_constraintVertical_chainStyle="packed"
      custom:pb_colorComplete="@color/green_complete"
      custom:pb_colorNormal="@color/blue_normal"
      custom:pb_colorPressed="@color/blue_pressed"
      custom:pb_colorProgress="@color/purple_progress"
      />
</android.support.constraint.ConstraintLayout>